--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=8085
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.web.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
 spring.messages.basename=lang.messages
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=user
+spring.datasource.password=postgres
+spring.datasource.initialization-mode=always
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.data=classpath:data.sql
+spring.datasource.schema=classpath:schema.sql
