--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,11 @@ spring.messages.basename=lang.messages
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=user
 spring.datasource.password=postgres
-spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.data=classpath:data.sql
-spring.datasource.schema=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
