--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,11 +16,18 @@ spring:
     driver-class-name: org.postgresql.Driver
   sql:
     init:
-      data-locations: classpath:data.sql
-      mode: always
+      #data-locations: classpath:data.sql
+      mode: never
   jpa:
     hibernate:
       ddl-auto: create-drop
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
-    defer-datasource-initialization: true
+    defer-datasource-initialization: false
+  liquibase:
+    enabled: true
+    change-log: classpath:/db/changelog/db.changelog-master.xml
+
+logging:
+  level:
+    liquibase: INFO
